# Summarize_app

./: Readme.md  Todo.md
Backend/Summarize/server/: Cargo.toml  ]  example.env
Backend/Summarize/server/src/: main.rs  tokens.rs
Backend/Summarize/server/src/accounts/: datatypes.rs  db_queries.rs  emails.rs  mod.rs  routes.rs  schema.rs  urls.rs
Backend/Summarize/server/src/databases/: connections.rs
Backend/Summarize/server/src/ping/: routes.rs  urls.rs
Backend/Summarize/server/src/settings/: routes.rs  schema.rs
Backend/Summarize/server/src/utils/: validations.rs
Backend/apps/data-scraper/: .gitignore  Cargo.toml  README.md
Backend/apps/data-scraper/src/: args.rs  main.rs
Backend/apps/data-scraper/src/data_types/: field_options.rs
Backend/servers/01 accounts/: Cargo.toml  README.md  TODO.md  build.rs
Backend/servers/01 accounts/src/: main.rs
Backend/servers/01 accounts/src/accounts/: mod.rs
Backend/servers/01 accounts/src/datatypes/: auth.rs  claims.rs  email_types.rs  mod.rs  oauth_types.rs  response_types.rs  settings_objects.rs  text_types.rs  token_object.rs  token_types.rs
Backend/servers/01 accounts/src/middleware/: authentication.rs  logger.rs  mod.rs  rate_limiter.rs  verified_captcha.rs
Backend/servers/01 accounts/src/models/: mod.rs  password.rs  totp.rs  user.rs
Backend/servers/01 accounts/src/routes/: accounts.rs  mod.rs  ping.rs  settings.rs
Backend/servers/01 accounts/src/services/: cache_service.rs  colour_service.rs  email_service.rs  mod.rs  oauth_service.rs  response_service.rs  text_service.rs  token_service.rs  user_service.rs
Backend/servers/01 accounts/src/settings/: urls.rs
Backend/servers/01 accounts/src/utils/: colour_transformations.rs  database_connections.rs  mod.rs  validations.rs
Backend/servers/01 accounts/src/views/: mod.rs
Backend/servers/02 subscriptions/: .gitignore  README.rst  TODO.rst  ]  build.py  example.env  pyproject.toml
Backend/servers/02 subscriptions/old_src/datatypes/: urls.py
Backend/servers/02 subscriptions/old_src/middleware/: verified_captcha.py
Backend/servers/02 subscriptions/old_src/routes/: __init__.py  invoices.py  settings.py  subscriptions.py  webhooks.py
Backend/servers/02 subscriptions/old_src/services/: stripe_service.py
Backend/servers/02 subscriptions/old_src/utils/: database_connections.py
Backend/servers/02 subscriptions/src/: main.py
Backend/servers/02 subscriptions/src/datatypes/: discount_class.py  payment_method.py  payment_tier.py  payment_type.py  price.py  retry.py  subscriber.py  subscription.py  subscription_metadata.py  subscription_method.py  urls.py
Backend/servers/02 subscriptions/src/middleware/: authentication.py  logger.py  rate_limiter.py  subscribed.py  verified_captcha.py
Backend/servers/02 subscriptions/src/routes/: __init__.py  billing.py  init.py  invoices.py  payments.py  ping.py  purchases.py  settings.py  subscriptions.py  webhooks.py
Backend/servers/02 subscriptions/src/services/: cache_service.py  discount_service.py  email_service.py  encryption_service.py  paypal.py  paypal_service.py  stripe_service.py  subscription_service.py
Backend/servers/02 subscriptions/src/settings/: urls.py
Backend/servers/02 subscriptions/src/utils/: database_connections.py  paypal.py  validations.py
Backend/servers/02 subscriptions/src_old/: main.py
Backend/servers/02 subscriptions/src_old/middleware/: authentication.py
Backend/servers/02 subscriptions/src_old/models/: subscriber.py
Backend/servers/02 subscriptions/src_old/routes/: payments.py  ping.py  purchases.py  subscriptions.py  webhooks.py
Backend/servers/02 subscriptions/src_old/services/: encryption_service.py
Backend/servers/03 catalogues/: README.md  README.rst  TODO.rst  pyproject.toml
Backend/servers/03 catalogues/rust-scraper/: Cargo.toml  README.md  example.env
Backend/servers/03 catalogues/src/: main.py
Backend/servers/03 catalogues/src_old/: main.py
Backend/servers/04 editor/: Cargo.toml  README.md
Backend/servers/04 editor/src/: main.rs
Backend/servers/05 reader/: Cargo.toml  README.md
Backend/servers/05 reader/src/: main.rs
Backend/servers/08 recommendations/: .gitignore  Cargo.toml  build.rs  pyproject.toml
Backend/servers/08 recommendations/src/: main.py  main.rs
Backend/servers/11 recommendations/: README.md  pyproject.toml
Backend/servers/11 recommendations/src/: main.rs
Backend/servers/13 admin/: README.md  go.mod  main.go  pyproject.toml
Backend/servers/13 moderation/: pyproject.toml
Backend/servers/13 moderation/src/: main.py
Backend/servers/14 linux/: Cargo.toml
Backend/servers/14 linux/src/: main.rs
Backend/servers/15 windows/: Cargo.toml  README.md
Backend/servers/15 windows/src/: main.rs
Backend/servers/17 external/: Cargo.toml  build.rs
Backend/servers/17 external/src/: main.rs
Backend/servers/81 linux/: Cargo.toml  README.md
Backend/servers/81 linux/src/: main.rs
Backend/servers/83 ios/: Cargo.toml
Backend/servers/83 ios/src/: main.rs
Backend/servers/accounts/: Cargo.toml  README.md  build.rs  example.env
Backend/servers/accounts/src/: main.rs
Backend/servers/analytics/: pyproject.toml
Backend/servers/subscriptions/: README.rst  pyproject.toml
Backend/servers/subscriptions/src/: main.py
Frontend/linux/: .gitignore  CMakeLists.txt  TODO.md  meson.build
Frontend/linux/css/widget_test_2/: meson.build  widget_2.css
Frontend/linux/include/: meson.build
Frontend/linux/include/activate_window/: activate.h  meson.build  window_data.h
Frontend/linux/include/widget_test_1_and_3/: meson.build  widget_3.h
Frontend/linux/include/widget_test_2/: meson.build  widget_2.h
Frontend/linux/lua/: meson.build
Frontend/linux/lua/widget_test_2/: meson.build  text.json  widget_2.lua
Frontend/linux/src/: main.c  meson.build  old.c
Frontend/linux/src/activate_window/: activate.c  meson.build
Frontend/linux/src/widget_test_1_and_3/: widget_1.c  widget_3.c
Frontend/linux/src/widget_test_2/: meson.build  widget_2.c  widget_2.lua
Frontend/linux/src/widgets/: meson.build
(+1455 files in other folders)
