[tool.poetry]
name = "subscriptions"
version = "0.1.0"
description = ""
authors = ["1twalters01 <1twalters01@gmail.com>"]
readme = "README.rst"

[tool.poetry.scripts]
run = "src.main:main"
test = "pytest:main"
build = "build:main"

[tool.poetry.dependencies]
cryptography = "^43.0.0"
fastapi = "^0.112.1"
fernet = "^1.0.1"
protobuf = "^5.28.2"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.9.0"
python = "^3.10"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
redis = "^5.2.0"
sqlalchemy = "^2.0.32"
stripe = "^10.9.0"
uvicorn = "^0.30.6"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.2"

[[tool.poetry.packages]]
include = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
