[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-protobuf = "0.10.0"
actix-web = "4.5.1"
actix-ws = "0.3"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
prost = { version = "0.12", features = ["prost-derive"] }
prost-types = "0.12"
redis = { version = "0.25.2", features = ["tokio-comp"] }
rkyv = "0.7.45"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.37.0", features = ["full"] }

[build-dependencies]
prost-build = "0.12"
