[package]
name = "reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-protobuf = "0.11.0"
actix-web = "4.9.0"
prost = { version = "0.13.3", features = ["prost-derive"] }
prost-types = "0.13.3"
rkyv = "0.7.45"

[build-dependencies]
prost-build = "0.12"
