[package]
name = "recommendations"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-protobuf = "0.11.0"
actix-web = "4.9.0"
bytes = "1.7.2"
dotenv = "0.15.0"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
prost = { version = "0.13.3", features = ["prost-derive"] }
prost-types = "0.13.3"
pyo3 = "0.22.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid"] }
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

[build-dependencies]
prost-build = "0.13.3"
