[tool.poetry]
name = "recommendations"
version = "0.1.0"
description = ""
authors = ["1twalters01 <1twalters01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.17.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
maturin = "^1.7.4"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
