[package]
name = "external"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-protobuf = "0.11.0"
actix-web = "4.9.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
prost = "0.13.3"
prost-types = "0.13.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

[build-dependencies]
prost-build = "0.12"
