[package]
name = "ios"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
dotenv = "0.15.0"
prost = { version = "0.13.3", features = ["prost-derive"] }
prost-types = "0.13.3"
protobuf = "3.7.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[build-dependencies]
prost-build = "0.13.3"
