[tool.poetry]
name = "subscriptions"
version = "0.1.0"
description = ""
authors = ["1twalters01 <1twalters01@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
format = "poetry run black ."
venv = "source .venv/bin/activate"

[tool.poetry.dependencies]
python = "^3.10"
fernet = "^1.0.1"
fastapi = "^0.112.1"
python-dateutil = "^2.9.0.post0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
